--- a/assets/stylesheets/events-widget.scss
+++ b/assets/stylesheets/events-widget.scss
@@ -6,6 +6,10 @@
     display: flex;
     align-items: center;
     padding: 0.5em 1em;
+    border-bottom-width: 0;
+    &:last-child {
+      border-bottom-width: 1px;
+    }
   }
   .date {
     display: flex;
